--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,10 @@
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                         </ul>
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        </form>
                     </nav>
                 </div>
             </div>
