--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,10 @@
 
     {% block content %}
 
-        <div class="container-fluid">
-            <div class="row">
-                <form action="{{ url_for('login') }}" method="post">
-                    <p>Sign In</p>
-                    <input type="text" name="username" placeholder="Username" />
-                    <input type="password" name="password" placeholder="Password" />
-                    <button type="submit" class="btn btn-primary">Sign in</button>
-                </form>
-            </div>
-        </div>
+        {% if session['found'] %}
+            {% for row in results%}
+                <div> <a href="/location/{{row.zip}}">{{row.city}}, {{row.state}} - {{row.zip}}</a></div>
+            {% endfor %}
+        {% endif %}
 
     {% endblock %}
-
