--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,9 +17,17 @@
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                         </ul>
-                        <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
+                            {% if session['logged_in'] %}
+                            <input name="loc_search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            {% endif %}
+                        </form>
+                        <form action="{{ url_for('login') }}" method="post">
+                            <span>Sign In</span>
+                            <input type="text" name="username" placeholder="Username" />
+                            <input type="password" name="password" placeholder="Password" />
+                            <button type="submit" class="btn btn-primary">Sign in</button>
                         </form>
                     </nav>
                 </div>
