--- a/templates/regsuccess.html
+++ b/templates/regsuccess.html
@@ -4,7 +4,7 @@
 
         <div class="container-fluid">
             <div class="row">
-                <p>Thanks for registering <span>{{ fname }}</span> for registering! Your username is <b>{{ username }}</b>. Click <a class="nav-link" href="{{ url_for('search') }}"> here </a> to look up a city.</p>
+                <p>Thanks for registering <span><b>{{ fname }}</b></span>! Your username is <b>{{ username }}</b>. Click <a class="nav-link" href="{{ url_for('search') }}"> here </a> to look up a city.</p>
             </div>
         </div>
 
