--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,19 +11,18 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-expand-sm bg-info">
-                        <span class="navbar-brand mb-0 h1">Home</span>
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
-                        </ul>
-                        <form method="POST" action="/search" class="form-inline my-2 my-lg-0">
+                    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+                        <div class="navbar-nav">
+                            <a class="nav-item nav-link" href="{{ url_for('index') }}">Home</a>
+                            <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                        </div>
+                        <form class="form-inline" method="POST" action="/search" class="form-inline my-2 my-lg-0">
                             {% if session['logged_in'] %}
                             <input name="loc_search" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                             {% endif %}
                         </form>
-                        <form action="{{ url_for('login') }}" method="post">
+                        <form class="form-inline" action="{{ url_for('login') }}" method="post">
                             <span>Sign In</span>
                             <input type="text" name="username" placeholder="Username" />
                             <input type="password" name="password" placeholder="Password" />
