--- a/templates/locations.html
+++ b/templates/locations.html
@@ -5,12 +5,33 @@
 <p>Location results</p>
 
 {% if results %}
-<div>{{results.zip}}</div>
-<div>{{results.city}}</div>
-<div>{{results.state}}</div>
-<div>{{results.lat}}</div>
-<div>{{results.long}}</div>
-<div>{{results.pop}}</div>
+    <div>{{results.zip}}</div>
+    <div>{{results.city}}</div>
+    <div>{{results.state}}</div>
+    <div>{{results.lat}}</div>
+    <div>{{results.long}}</div>
+    <div>{{results.population}}</div>
+    <div>{{results.checkcount}}</div>
+    <div>{{results.time}}</div>
+    <div>{{results.summary}}</div>
+    <div>{{results.temperature}}</div>
+    <div>{{results.dewPoint}}</div>
+    <div>{{results.humidity}}</div>
+
+    <h4>Checkin</h4>
+    {% if results.comment == '' %}
+    <form class="my-2 my-lg-0" action="/comment" method="POST">
+        <input type="hidden" name="zipcode" value="{{results.zip}}">
+        <div class="form-group">
+            <textarea rows="3" name="comment"></textarea>
+        </div>
+        <div class="form-group">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+        </div>
+    </form>
+    {% else %}
+    <div>{{results.comment}}</div>
+    {% endif %}
 {% endif %}
 
 <!-- put check in form here -->
