--- a/templates/locations.html
+++ b/templates/locations.html
@@ -5,6 +5,8 @@
 <p>Location results</p>
 
 {% if results %}
+
+    <div container
     <div>{{results.zip}}</div>
     <div>{{results.city}}</div>
     <div>{{results.state}}</div>
@@ -19,21 +21,22 @@
     <div>{{results.humidity}}</div>
 
     <h4>Checkin</h4>
-    {% if results.comment == '' %}
+    {% if show_checkin_form %}
+
     <form class="my-2 my-lg-0" action="/comment" method="POST">
-        <input type="hidden" name="zipcode" value="{{results.zip}}">
+        <input type="hidden" name="id" value="{{results.id}}">
         <div class="form-group">
             <textarea rows="3" name="comment"></textarea>
         </div>
         <div class="form-group">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Submit</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" placeholder="Optional comments">Check-in</button>
         </div>
     </form>
-    {% else %}
-    <div>{{results.comment}}</div>
     {% endif %}
-{% endif %}
 
-<!-- put check in form here -->
+    {% for comment in results.comments %}
+        <div>{{comment.comnts}}</div>
+    {% endfor %}
+{% endif %}
 
 {% endblock %}
