--- a/templates/regsuccess.html
+++ b/templates/regsuccess.html
@@ -5,11 +5,9 @@
         <div class="container-fluid">
             <div class="row">
                 <p>Thanks for registering <span><b>{{ fname }}</b></span>! Your username is <b>{{ username }}</b>.
-                Use a zipcode or city name to se up to date weather information and more</p>
+                Use a zipcode or city name to get up to date weather information and more</p>
             </div>
         </div>
 
 {% endblock %}
 
-    </body>
-</html>
