--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <title>Weather and More!</title>
-        <link rel="stylesheet" href="/project1/css/style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
@@ -41,10 +41,12 @@
                     </nav>
                 </div>
             </div>
-        </div>
 
         {% block content %}
         {% endblock %}
+
+        </div>
+
 
     </body>
 </html>
